20121208 configure.ac,libspectrum.h.in: preliminary support for 64-bits binaries
         for Windows (patch #3591613) (Sergio).
20121208 README: document support for reading PZX files (Sergio).
20121222 szx.c: split SNET block into SNET, SNEF and SNER so that flash could
         theoretically be saved separately (patch #3596469) (Fred).
20121225 accessor.pl,libspectrum.h.in,sna.c,snap_accessors.txt,snapshot.c,szx.c,
         z80.c: extend SZX support to version 1.5 draft specs (Fred).
20121226 accessor.pl,snap_accessors.txt,snapshot.c,szx.c: MEMPTR is also in v1.4
         SZX files (Fred).
20121226 make-perl.c: fix typo in comment (Fred).
20121226 szx.c: inline constant in write_snet_chunk() (Fred).
20121226 doc/libspectrum.txt: add some text about changes to the interface
         (Fred).
20121226 configure.ac: bump version number to 1.1.0 (Fred).
20121226 doc/libspectrum.txt: tweak PZX text (Fred).
20121226 ChangeLog,README: first updates for a "1.1.0" release (Fred).
20121227 libspectrum.c: set name for Spectrum 128Ke machine type (Sergio).
20121229 doc/libspectrum.1: use an em dash (Stuart).
20121230 timings.c: add timings for 128Ke, copied from those for 128K (Stuart).
20121231 timings.c: 128Ke timings are intended to be based on +2A (Fred).
20121231 libspectrum.c: add 128Ke capabilities as long as it is in the library
         (Fred).
20121231 accessor.pl,doc/libspectrum.txt,libspectrum.h.in,sna.c,z80.c: rename
         'Interface II' to 'Interface 2' in comments and documentation (Stuart).
20130103 configure.ac: make some URLs point to the new sourceforge forge and
         update copyright date to 2013 (Sergio).
20130103 configure.ac: add trailing slash to URL of bug tracker (Stuart).
20130126 accessor.pl,doc/libspectrum.txt,snap_accessors.txt,snapshot.c,szx.c:
         add support for storing ZX Printer state (bug #274) (Fred).
20130130 timings.c: correct video timing for +2A/+3 etc machines (part of
         patch #305).