@@ -940,3 +940,5 @@ hacking/ChangeLog: the small scale changelog for libspectrum
          add support for storing ZX Printer state (bug #274) (Fred).
 20130130 timings.c: correct video timing for +2A/+3 etc machines (part of
          patch #305).
+20130307 accessor.pl,snap_accessors.txt,szx.c: implement Spectranet's "suppress
+         NMI" flipflop (bug #259).
